--- a/systemd/user/swaybg.service
+++ b/systemd/user/swaybg.service
@@ -4,5 +4,5 @@ After=graphical-session.target
 Requisite=graphical-session.target
 
 [Service]
-ExecStart=/usr/bin/swaybg -m fill -i "%h/Pictures/LakeSide.png"
+ExecStart=/home/kid/.config/swaybg.sh
 Restart=on-failure
